k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pabilo-gobcv-backend-clusterip
  namespace: pabilo
spec:
  type: ClusterIP
  selector:
    app: pabilo-gobcv-backend-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pabilo-gobcv-backend-app-deploy
  namespace: pabilo
  labels:
    app: pabilo-gobcv-backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pabilo-gobcv-backend-app
  template:
    metadata:
      labels:
        from: kuarere
        app: pabilo-gobcv-backend-app
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: pabilo-gobcv-backend
          image: harbor.andrusdiaz.dev/pabilo/pabilo-gobcv:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
